--- a/Band.html
+++ b/Band.html
@@ -26,11 +26,11 @@
 	<ul>
 		<h2> CD's released</h2>
 			<strong>Monkey Business (2005)</strong>
-				<P ALIGN=CENTER>The album was certified three times Platinum by the RIAA in the U.S. and has sold over 11 million copies worldwide. It included singles such as My Humps, Don't Lie, and Pump it.</P>
+				<P ALIGN=LEFT>The album was certified three times Platinum by the RIAA in the U.S. and has sold over 11 million copies worldwide. It included singles such as My Humps, Don't Lie, and Pump it.</P>
 		<br><strong>The E.N.D (2009)</strong>
-				<p ALIGN=CENTER>An abbreviation of The Energy Never Dies) is the fifth studio album by American group The Black Eyed Peas. It was released on June 3, 2009. Critics described the album as containing more anthemic and inspirational songs in the group's bid to appeal to a new generation of music listeners.</P>
+				<p ALIGN=LEFT>An abbreviation of The Energy Never Dies) is the fifth studio album by American group The Black Eyed Peas. It was released on June 3, 2009. Critics described the album as containing more anthemic and inspirational songs in the group's bid to appeal to a new generation of music listeners.</P>
 		<br><strong>The Beginning (2010)</strong>
-				<P ALIGN=CENTER>The album debuted at number six on the Billboard 200 chart, with first-week sales of 119,000 copies in the United States. It is their third album to chart inside the top ten, but their lowest charting album</P>
+				<P ALIGN=LEFT>The album debuted at number six on the Billboard 200 chart, with first-week sales of 119,000 copies in the United States. It is their third album to chart inside the top ten, but their lowest charting album</P>
 	</ul>
     <p>
 		For more information on the Black Eyed Peas please visit them at <a href="http://www.blackeyedpeas.com/">Blackeyedpeas.com</a>
