--- a/Band.html
+++ b/Band.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-
+	<link href="Format1.css" rel="StyleSheet" />
 	<title>Black Eyed Peas</title>
 	
 <meta charset="utf-8">
