--- a/Band.html
+++ b/Band.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-	<link href="format1.css" rel="StyleSheet" />
+	<link rel="stylesheet" type="text/css" href="format1.css">
 	<title>Black Eyed Peas</title>
 	
 <meta charset="utf-8">
