--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -15,9 +15,9 @@
 	</h1>
 		<p> 
 		The Fast and the Furious (also known as Fast & Furious) is an American franchise including a series of action films, which center around illegal street racing and heists, 
-		and various other media portraying the characters and situations from the films. An elite street racer and ex-convict Dominic Toretto (Vin Diesel) and his crew: Jesse (Chad Lindberg), Leon (Johnny Strong), 
-		Vince (Matt Schulze) and Letty Ortiz (Michelle Rodriguez),are under suspicion of stealing expensive electronic equipment by hijacking moving trucks, Brian O'Conner (Paul Walker) is an undercover police officer
-		who attempts to find out who exactly is stealing the equipment. He works for FBI agent Bilkins (Thom Barry) and LAPD Sgt. Tanner (Ted Levine).
+		and various other media portraying the characters and situations from the films. An elite street racer and ex-convict Dominic Toretto and his crew: Jesse , Leon , 
+		Vince and Letty Ortiz ,are under suspicion of stealing expensive electronic equipment by hijacking moving trucks, Brian O'Conner is an undercover police officer
+		who attempts to find out who exactly is stealing the equipment. He works for FBI agent Bilkins and LAPD Sgt. Tanner.
 		</p>
 	<h3>Roles and Actors</h3>
 		<ul>
