--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -4,15 +4,14 @@
 
 <head>
 
-	<title>Recipe.html</title>
+	<title>Fast and Furious</title>
 	
 <meta charset="utf-8">
 
 </head>
 
 <body>
-	<h1> Fast and Furious
-	</h1>
+	<h1 align="center"> Fast and Furious</h1>
 		<p> 
 		The Fast and the Furious (also known as Fast & Furious) is an American franchise including a series of action films, which center around illegal street racing and heists, 
 		and various other media portraying the characters and situations from the films. An elite street racer and ex-convict Dominic Toretto and his crew: Jesse , Leon , 
