--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<h1 align="center"> Fast and Furious</h1>
+	<h1 align="center"> The Fast and the Furious</h1>
 		<p> 
 		The Fast and the Furious (also known as Fast & Furious) is an American franchise including a series of action films, which center around illegal street racing and heists, 
 		and various other media portraying the characters and situations from the films. An elite street racer and ex-convict Dominic Toretto and his crew: Jesse , Leon , 
@@ -29,7 +29,7 @@
 			<li><strong>FBI agent Bilkins</strong> – Thom Barry</li>
 			<li><strong>LAPD Sgt. Tanner</strong> – Ted Levine</li>
 		</ul>
-    <p>
+    <p align="center">
 		For more information on the fast and furious movies please visit <a href="http://www.fastandfurious.com/">Fast and Furious Movies and Trailers</a>.
 	<br>For any questions, comments, and/or concerns on this movie site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
