--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -12,6 +12,10 @@
 
 <body>
 	<h1 align="center"> The Fast and the Furious</h1>
+	
+	<video width="400" controls>
+	  <source src="The Fast And The Furious - Trailer (HD).mp4" type="video/mp4">
+	</video>
 		<p> 
 		The Fast and the Furious (also known as Fast & Furious) is an American franchise including a series of action films, which center around illegal street racing and heists, 
 		and various other media portraying the characters and situations from the films. An elite street racer and ex-convict Dominic Toretto and his crew: Jesse , Leon , 
