--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -13,7 +13,7 @@
 <body>
 	<h1 align="center"> The Fast and the Furious</h1>
 	
-	<video width="400" controls>
+	<video align="center" width="400" controls>
 	  <source src="The Fast And The Furious - Trailer (HD).mp4" type="video/mp4">
 	</video>
 		<p> 
@@ -33,7 +33,7 @@
 			<li><strong>FBI agent Bilkins</strong> – Thom Barry</li>
 			<li><strong>LAPD Sgt. Tanner</strong> – Ted Levine</li>
 		</ul>
-    <p>
+    <p align="center">
 		For more information on the fast and furious movies please visit <a href="http://www.fastandfurious.com/">Fast and Furious Movies and Trailers</a>.
 	<br>For any questions, comments, and/or concerns on this movie site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
