--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -13,7 +13,7 @@
 <body>
 	<h1 align="center"> The Fast and the Furious</h1>
 	
-	<video align="center" width="400" controls>
+	<video align="center" controls>
 	  <source src="The Fast And The Furious - Trailer (HD).mp4" type="video/mp4">
 	</video>
 		<p> 
