--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -6,16 +6,25 @@
 
 	<title>Fast and Furious.html</title>
 	
+<script type="text/css">
+.video {
+margin: 0 auto;
+width="400";
+}
+</script>
+	
 <meta charset="utf-8">
 
 </head>
 
 <body>
 	<h1 align="center"> The Fast and the Furious</h1>
-	
-	<video align="center" controls>
-	  <source src="The Fast And The Furious - Trailer (HD).mp4" type="video/mp4">
-	</video>
+	<div class="video">	
+		<video controls>
+		  <source src="The Fast And The Furious - Trailer (HD).mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+	</div>
 		<p> 
 		The Fast and the Furious (also known as Fast & Furious) is an American franchise including a series of action films, which center around illegal street racing and heists, 
 		and various other media portraying the characters and situations from the films. An elite street racer and ex-convict Dominic Toretto and his crew: Jesse , Leon , 
