--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -20,7 +20,7 @@ width="400";
 <body>
 	<h1 align="center"> The Fast and the Furious</h1>
 	<div class="video">	
-		<video controls>
+		<video width="400" controls>
 		  <source src="The Fast And The Furious - Trailer (HD).mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
