--- a/Moviecss1.html
+++ b/Moviecss1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-
+	<link rel="stylesheet" type="text/css" href="format1.css">
 	<title>Fast and Furious.html</title>
 	
 <meta charset="utf-8">
