--- a/Burgos.html
+++ b/Burgos.html
@@ -22,8 +22,7 @@
   
     <p align="center">
     	For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
-    	<a href="mailto:haroldjburgos@gmail.com?
-    	Subject=Harold%20Burgos%20HTML" target="_top">Email</a>
+    	<a href="mailto:haroldjburgos@gmail.com?Subject=Harold%20Burgos%20HTML" target="_top">Email</a>
   	</p>
 	
 </body>
