--- a/freegraphics.html
+++ b/freegraphics.html
@@ -13,10 +13,10 @@
 	
 		<ul>
 			<li><a href="http://www.fastandfurious.com/">ClipArt</a></li>
-		  <li><a href="http://www.fastandfurious.com/">ClipArt</a></li>
-		  <li><a href="http://www.fastandfurious.com/">ClipArt</a></li>
-		  <li><a href="http://www.fastandfurious.com/">ClipArt</a></li>
-		  <li><a href="http://www.fastandfurious.com/">ClipArt</a></li>
+		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
+		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
+		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
+		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
 		</ul>
     
     <p align="center">
