--- a/freegraphics.html
+++ b/freegraphics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="format1.css">
+	<link rel="stylesheet" type="text/css" href="freegraphics.css">
 	<title>Harold's Free Clipart Resources.html</title>
 
   <meta charset="utf-8">
@@ -12,11 +12,11 @@
 	<h1 align="center">Harold's Free Clipart Resources</h1>
 	
 		<ul>
-			<li><a href="http://www.fastandfurious.com/">ClipArt</a></li>
-		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
-		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
-		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
-		  <li><a href="http://www.w3schools.com" target="_blank">Visit W3Schools!</a></li>
+		  <li><a href="https://openclipart.org/" target="_blank">Open Clip Art</a></li>
+		  <li><a href="http://classroomclipart.com/" target="_blank">Classroom Clip Art</a></li>
+		  <li><a href="http://www.artvex.com/" target="_blank">Art Vex</a></li>
+		  <li><a href="http://sweetclipart.com/" target="_blank">Sweet Clip Art</a></li>
+		  <li><a href="http://www.clker.com/" target="_blank">clker</a></li>
 		</ul>
     
     <p align="center">
