--- a/freegraphics.html
+++ b/freegraphics.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+<style>
+    ul { display:table; margin:0 auto;}
+<style>
 	<h1 align="center">Harold's Free Clipart Resources</h1>
 	
 		<ul>
