--- a/freegraphics.html
+++ b/freegraphics.html
@@ -4,14 +4,15 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="freegraphics.css">
 	<title>Harold's Free Clipart Resources.html</title>
+	<style type="text/css">
+	    ul { display:table; margin:0 auto;}
+	<style>
 
   <meta charset="utf-8">
 </head>
 
 <body>
-<style>
-    ul { display:table; margin:0 auto;}
-<style>
+ 
 	<h1 align="center">Harold's Free Clipart Resources</h1>
 	
 		<ul>
