--- a/mylinks.html
+++ b/mylinks.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="freegraphics.css">
-	<title>Harold's Free Clipart Resources.html</title>
+	<link rel="stylesheet" type="text/css" href="mylinks.css">
+	<title>my Favorite links.html</title>
 	
 
   <meta charset="utf-8">
@@ -11,19 +11,18 @@
 
 <body>
  
-	<h1 align="center">Harold's Free Clipart Resources</h1>
+	<h1 align="center">My Favorite Links</h1>
 	
 		<ul>
-		  <li><a href="https://openclipart.org/" target="_blank">Open Clip Art</a></li>
-		  <li><a href="http://classroomclipart.com/" target="_blank">Classroom Clip Art</a></li>
-		  <li><a href="http://www.artvex.com/" target="_blank">Art Vex</a></li>
-		  <li><a href="http://sweetclipart.com/" target="_blank">Sweet Clip Art</a></li>
-		  <li><a href="http://www.clker.com/" target="_blank">clker</a></li>
+		  <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+		  <li><a href="https://www.instagram.com/?hl=en" target="_blank">Instagram</a></li>
+		  <li><a href="https://www.youtube.com/" target="_blank">youtube.com</a></li>
+		  <li><a href="http://www.w3schools.com/" target="_blank">W3 Schools</a></li>
 		</ul>
     
     <p align="center">
 		For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
-	  <a href="mailto:haroldjburgos@gmail.com?Subject=ClipArt%20HTML" target="_top">Email</a>
+	  <a href="mailto:haroldjburgos@gmail.com?Subject=MyLinks%20HTML" target="_top">Email</a>
 	</p>
 	
 </body>
