--- a/mylinks.html
+++ b/mylinks.html
@@ -13,7 +13,7 @@
  
 	<h1 align="center">My Favorite Links</h1>
 	
-		<ul>
+		<ul style="list-style-type:none">
 		  <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
 		  <li><a href="https://www.instagram.com/?hl=en" target="_blank">Instagram</a></li>
 		  <li><a href="https://www.youtube.com/" target="_blank">youtube.com</a></li>
