--- a/mylinks.html
+++ b/mylinks.html
@@ -14,10 +14,10 @@
 	<h1 align="center">My Favorite Links</h1>
 	
 		<ul style="list-style-type:none">
-		  <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-		  <li><a href="https://www.instagram.com/?hl=en" target="_blank">Instagram</a></li>
-		  <li><a href="https://www.youtube.com/" target="_blank">youtube.com</a></li>
-		  <li><a href="http://www.w3schools.com/" target="_blank">W3 Schools</a></li>
+		  <li><a href="https://www.facebook.com/" target="">Facebook</a></li>
+		  <li><a href="https://www.instagram.com/?hl=en" target="">Instagram</a></li>
+		  <li><a href="https://www.youtube.com/" target="">youtube.com</a></li>
+		  <li><a href="http://www.w3schools.com/" target="">W3 Schools</a></li>
 		</ul>
     
     <p align="center">
