--- a/Movie8.html
+++ b/Movie8.html
@@ -18,7 +18,7 @@
 	  Your browser does not support the video tag.
 </video>
 
-<table style="text-align:center;
+<table align="center">
 	<tr>
 	<th>Title of the movie</th>
 	<td>The Fast and the Furious: Tokyo Drift</td>
