--- a/Movie8.html
+++ b/Movie8.html
@@ -56,6 +56,8 @@
 	</tr>
 </table>
 
+<img src="tokyo_drift.JPG" alt="Tokyo Drift">
+
 <p align="center">
 	For more information on the fast and furious movies please visit <a href="http://www.fastandfurious.com/">Fast and Furious Movies and Trailers</a>.
 	<br>For any questions, comments, and/or concerns on this movie site please feel free to contact Harold Burgos via
