--- a/Movie8.html
+++ b/Movie8.html
@@ -56,7 +56,7 @@
 	</tr>
 </table>
 
-<img src="tokyo_drift.jpg" alt="Tokyo Drift">
+<img align="center" src="tokyo_drift.jpg" alt="Tokyo Drift">
 
 <p align="center">
 	For more information on the fast and furious movies please visit <a href="http://www.fastandfurious.com/">Fast and Furious Movies and Trailers</a>.
