--- a/Band8.html
+++ b/Band8.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
 
+<html lang="en">
+
+<head>
+	<link rel="stylesheet" type="text/css" href="Movie8.css">
+	<title>The Fast and Furious: Tokyo Drift.html</title>
+	
+<meta charset="utf-8">
+
+</head>
+
+<body>
+<h1 align="center"> The Fast and the Furious: Tokyo Drift</h1>
+	
+<video width="400" controls>
+	  <source src="The Fast And The Furious- Tokyo Drift - Trailer (HD) (1).mp4" type="video/mp4">
+	  Your browser does not support the video tag.
+</video>
+
+<table align="center">
+	<tr>
+	<th>Title of the movie</th>
+	<td>The Fast and the Furious: Tokyo Drift</td>
+	
+	</tr>
+	<tr>
+	<th>Director or producer</th>
+	<td>Justin Lin</td>
+	
+	</tr>
+	<tr>
+	<th>Leading actor</th>
+	<td>Lucas Black</td>
+	
+	</tr>
+	<tr>
+	<th>Leading actress</th>
+	<td>Nathalie Kelley</td>
+	
+	</tr>
+	<tr>
+	<th>Rating (G, PG, PG-13, R, NC-17, NR)</th>
+	<td>PG-13</td>
+	
+	</tr>
+	<tr>
+	<th>A brief description of the movie</th>
+	<td>An American teenager named Sean Boswell is a loner in school, however he challenges his rival for an illegal street racing, and he totals his car in the end of the race. To avoid time in prison he is sent to Tokyo to live with his father who is in the military. As soon as he arrives he discovers a new, fun but dangerous way of street racing in the underworld of the streets of Tokyo, Japan.</td>
+	
+	</tr>
+	<tr>
+	<th>review of the movie</th>
+	<td><a href="https://www.rottentomatoes.com/m/fast_and_the_furious_tokyo_drift/" target="">Rotten Tomatoes Review</a></td>
+	
+	</tr>
+</table>
+
+<img src="tokyo_drift.jpg" alt="Tokyo Drift">
+
+<p align="center">
+	For more information on the fast and furious movies please visit <a href="http://www.fastandfurious.com/">Fast and Furious Movies and Trailers</a>.
+	<br>For any questions, comments, and/or concerns on this movie site please feel free to contact Harold Burgos via
+	<a href="mailto:haroldjburgos@gmail.com?
+	Subject=The%20Fast%20And%20the%20Furious%20Tokyo%20Drift%20HTML" target="_top">Email</a>
+</p>
+	
+</body>
+</html>
