--- a/Band8.html
+++ b/Band8.html
@@ -3,8 +3,8 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="Movie8.css">
-	<title>The Fast and Furious: Tokyo Drift.html</title>
+	<link rel="stylesheet" type="text/css" href="Band8.css">
+	<title>Band8.html</title>
 	
 <meta charset="utf-8">
 
