--- a/Band8.html
+++ b/Band8.html
@@ -20,40 +20,16 @@
 
 <table align="center">
 	<tr>
-	<th>Title of the movie</th>
-	<td>The Fast and the Furious: Tokyo Drift</td>
+	<td>Group</td>
+	<td>Tracks</td>
+	<td>Year</td>
+	<td>Links</td>
 	
-	</tr>
-	<tr>
-	<th>Director or producer</th>
-	<td>Justin Lin</td>
-	
-	</tr>
-	<tr>
-	<th>Leading actor</th>
-	<td>Lucas Black</td>
-	
-	</tr>
-	<tr>
-	<th>Leading actress</th>
-	<td>Nathalie Kelley</td>
-	
-	</tr>
-	<tr>
-	<th>Rating (G, PG, PG-13, R, NC-17, NR)</th>
-	<td>PG-13</td>
-	
-	</tr>
-	<tr>
-	<th>A brief description of the movie</th>
-	<td>An American teenager named Sean Boswell is a loner in school, however he challenges his rival for an illegal street racing, and he totals his car in the end of the race. To avoid time in prison he is sent to Tokyo to live with his father who is in the military. As soon as he arrives he discovers a new, fun but dangerous way of street racing in the underworld of the streets of Tokyo, Japan.</td>
-	
-	</tr>
 	<tr>
 	<th>review of the movie</th>
 	<td><a href="https://www.rottentomatoes.com/m/fast_and_the_furious_tokyo_drift/" target="">Rotten Tomatoes Review</a></td>
 	
-	</tr>
+	</tr> 
 </table>
 
 <img src="tokyo_drift.jpg" alt="Tokyo Drift">
