--- a/Band8.html
+++ b/Band8.html
@@ -29,7 +29,9 @@
 	<th>Drake</th>
 	<th>Views</th>
 	<th>2016</th>
-	<th><a href="http://www.drakeofficial.com/" target="">Drake Official</a></th>
+	<th><a href="http://www.drakeofficial.com/" target="">Drake Official</a>
+	    <a href="https://en.wikipedia.org/wiki/Drake_(musician)" target="">Drake Wiki</a>
+	</th>
 	</tr> 
 	
 </table>
