--- a/Band8.html
+++ b/Band8.html
@@ -21,7 +21,7 @@
 
 <table align="center">
 	<tr>
-	<th>Title of the movie</th>
+	<td>Title of the movie</td>
 	<td>The Fast and the Furious: Tokyo Drift</td>
 	
 	</tr>
