--- a/Band8.html
+++ b/Band8.html
@@ -27,11 +27,10 @@
     <th>Links</th>
   </tr>
   <tr>
-    <td>Drake</td>
-    <td>Views</td>
-    <td>2016</td>
-    <td><a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a>
-  </td>
+    <th>Drake</th>
+    <th>Views</th>
+    <th>2016</th>
+    <th><a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a></th>
   </tr>
 </table>
 
