--- a/Band8.html
+++ b/Band8.html
@@ -30,7 +30,7 @@
     <th>Drake</th>
     <th>Views</th>
     <th>2016</th>
-    <th><a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a></th>
+    <th>links</th>
   </tr>
 </table>
 
