--- a/Band8.html
+++ b/Band8.html
@@ -21,16 +21,16 @@
 
 <table align="center">
  <tr>
-    <th>Group</th>
-    <th>Tracks</th>
-    <th>Year</th>
-    <th>Links</th>
+    <td>Group</td>
+    <td>Tracks</td>
+    <td>Year</td>
+    <td>Links</td>
   </tr>
   <tr>
-    <th>Drake</th>
-    <th>Views</th>
-    <th>2016</th>
-    <th>links</th>
+    <td>Drake</td>
+    <td>Views</td>
+    <td>2016</td>
+    <td>links</td>
   </tr>
 </table>
 
