--- a/Band8.html
+++ b/Band8.html
@@ -11,13 +11,12 @@
 </head>
 
 <body>
-<h1 align="center"> The Fast and the Furious: Tokyo Drift</h1>
+<h1 align="center">Drake</h1>
 	
 <audio controls>
   <source src="Hype.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
-
 
 <img src="Drakeviews.jpg" alt="Drake">
 
