--- a/Band8.html
+++ b/Band8.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="Band8.css">
-	<title>The Fast and Furious: Tokyo Drift.html</title>
+	<title>Drake.html</title>
 	
 <meta charset="utf-8">
 
