--- a/Band8.html
+++ b/Band8.html
@@ -14,8 +14,8 @@
 <h1 align="center">Drake</h1>
 
 <audio controls autoplay>
-  <source src="Hype.ogg" type="audio/ogg">
-  <source src="Hype.mp3" type="audio/mpeg">
+  <source src="HypeDrake.ogg" type="audio/ogg">
+  <source src="HypeDrake.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 	
@@ -30,8 +30,8 @@
 	<th>Drake</th>
 	<th>Views</th>
 	<th>2016</th>
-	<th><a href="http://www.drakeofficial.com/" target="">Drake Official</a>
-	    <a href="https://en.wikipedia.org/wiki/Drake_(musician)" target="">Drake Wiki</a>
+	<th><a href="http://www.drakeofficial.com/" target="_blank">Drake Official</a>
+	    <a href="https://en.wikipedia.org/wiki/Drake_(musician)" target="_blank">Drake Wiki</a>
 	</th>
 	</tr> 
 	
