--- a/MusicSurvey.html
+++ b/MusicSurvey.html
@@ -11,34 +11,21 @@
 </head>
 
 <body>
-<h1 align="center">Drake</h1>
+<h1 align="center">Music Survey</h1>
 
-<audio controls>
-  <source src="HypeDrake.mp3" type="audio/mpeg">
-  <source src="HypeDrake.ogg" type="audio/ogg">
-  Your browser does not support the audio element.
-</audio>
+
+<form action="action_page.php">
+  Name:<br>
+  <input type="text" name="Name" id="Name">
+  <br>
+  Email:<br>
+  <input type="text"  name="Email" id="Email">
+  <br><br>
+  <input type="submit" value="Submit">
+  <input type="reset" value="reset">
+</form>
+
  
-<table align="center">
-	<tr>
-	<td>Group</td>
-	<td>Tracks</td>
-	<td>Year</td>
-	<td>Links</td>
-	
-	<tr>
-	<th>Drake</th>
-	<th>Views</th>
-	<th>2016</th>
-	<th><a href="http://www.drakeofficial.com/" target="_blank">Drake Official</a>
-	    <a href="https://en.wikipedia.org/wiki/Drake_(musician)" target="_blank">Drake Wiki</a>
-	</th>
-	</tr> 
-	
-</table>
-
-<img src="Drakeviews.jpg" alt="Drake">
-
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
