--- a/MusicSurvey.html
+++ b/MusicSurvey.html
@@ -16,11 +16,24 @@
 
 <form action="action_page.php">
   Name:<br>
-  <input type="text" name="Name" id="Name">
-  <br>
+  <input type="text" name="Name" id="Name"> <br>
   Email:<br>
-  <input type="text"  name="Email" id="Email">
-  <br><br>
+  <input type="text"  name="Email" id="Email"><br>
+  Select Your Favorite Types of Music CDs:<br>
+  <input type="checkbox" id="FavPop" name="Pop" value="Pop">Pop
+  <br>
+  <input type="checkbox" id="FavClassical" name="Classical" value="Classical">Classical
+  <br>
+  <input type="checkbox" id="FavRock" name="Rock" value="Rock">Rock
+  <br> 
+  <input type="checkbox" id="FavFolk" name="Folk" value="Folk">Folk
+  <br>
+  <input type="checkbox" id="FavRap" name="Rap" value="Rap">Rap
+  <br>
+  <input type="checkbox" id="FavOther" name="Other" value="other">Other
+  <br>
+<br>
+<input type="submit">
   <input type="submit" value="Submit">
   <input type="reset" value="reset">
 </form>
