--- a/MusicSurvey.html
+++ b/MusicSurvey.html
@@ -19,7 +19,7 @@
   <input type="text" name="Name" id="Name"> <br>
   Email:<br>
   <input type="text"  name="Email" id="Email"><br>
-  Select Your Favorite Types of Music CDs:<br>
+ Select Your Favorite Types of Music:<br>
   <input type="checkbox" id="FavPop" name="Pop" value="Pop">Pop
   <br>
   <input type="checkbox" id="FavClassical" name="Classical" value="Classical">Classical
@@ -32,6 +32,22 @@
   <br>
   <input type="checkbox" id="FavOther" name="Other" value="other">Other
   <br>
+ Select how often you purchase music:<br>
+  <input type="radio" id="PurchaseWeekly" name="Weekly" value="Weekly">Weekly
+  <br>
+  <input type="radio" id="PurchaseMonthly" name="Monthly" value="Weekly">Monthly
+  <br>
+  <input type="radio" id="PurchaseYearly" name="Yearly" value="Yearly">Yearly
+  <br> 
+  <input type="radio" id="PurchaseNever" name="Never" value="Never">Never
+  <br>
+What role does music play in your life:<br>
+ <select size="3" cols="60" name="MusicRole" id="MusicRole">
+  <option value="Uplifting">Uplifting</option>
+  <option value="Relaxing">Relaxing</option>
+  <option value="Inspiring">Inspiring</option>
+  <option value="Entertaining">Entertaining</option>
+</select>
 <br>
 <input type="submit">
   <input type="submit" value="Submit">
