--- a/MusicSurvey.html
+++ b/MusicSurvey.html
@@ -19,6 +19,7 @@
   <input type="text" name="Name" id="Name"> <br>
   Email:<br>
   <input type="text"  name="Email" id="Email"><br>
+
 <fieldset>
 	<legend>Select Your Favorite Types of Music:</legend><br>
   <input type="checkbox" id="FavPop" name="Pop" value="Pop">Pop
@@ -34,8 +35,9 @@
   <input type="checkbox" id="FavOther" name="Other" value="other">Other
 </fieldset>
   <br>
+
 <fieldset>
-	<legend> Select how often you purchase music:<legend><br>
+	<legend> Select how often you purchase music:</legend><br>
   <input type="radio" id="PurchaseWeekly" name="Weekly" value="Weekly">Weekly
   <br>
   <input type="radio" id="PurchaseMonthly" name="Monthly" value="Weekly">Monthly
@@ -43,21 +45,25 @@
   <input type="radio" id="PurchaseYearly" name="Yearly" value="Yearly">Yearly
   <br> 
   <input type="radio" id="PurchaseNever" name="Never" value="Never">Never
-  <br>
-	</fieldset>
+</fieldset>
+
 locations where you listen to music<br>
- <select size="3" cols="60" name="MusicRole" id="MusicRole">
-  <option value="Uplifting">Uplifting</option>
-  <option value="Relaxing">Relaxing</option>
-  <option value="Inspiring">Inspiring</option>
-  <option value="Entertaining">Entertaining</option>
+<select size="3" cols="60" name="MusicRole" id="MusicRole">
+  <option value="At Home">At Home</option>
+  <option value="In the Car">In the Car</option>
+  <option value="Everywhere">Everywhere</option>
+  <option value="Gym">Gym</option>
 </select>
 <br>
+
+What role does music play in your life?<br>
+<textarea rows="3" cols="60">
+</textarea>
+
 <input type="submit">
   <input type="submit" value="Submit">
   <input type="reset" value="reset">
 </form>
-
  
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
