--- a/MusicSurvey.html
+++ b/MusicSurvey.html
@@ -15,7 +15,7 @@
 <h1 align="center">Music Survey</h1>
 
 
-<form action="action_page.php">
+<form action="http://www.markmurtha.com/csis128/readform.asp">
   Name:<br>
   <input type="text" name="Name" id="Name"> <br>
   Email:<br>
