--- a/MusicSurvey.html
+++ b/MusicSurvey.html
@@ -58,8 +58,8 @@ locations where you listen to music<br>
 </select>
 <br><br>
 
-What role does music play in your life?<br>
-<textarea rows="3" cols="60">
+What role does music play in your life?<br>	
+<textarea name="MusicRole" id=MusicRole rows="3" cols="60">
 </textarea>
 <br>
   <input type="submit" value="Submit">
