--- a/Band8.html
+++ b/Band8.html
@@ -38,6 +38,30 @@
 </table>
 
 <img src="Drakeviews.jpg" alt="Drake">
+	
+Deep Discount
+<form action="http://www.deepdiscount.com/search" method="get" target="_blank">
+	<input type="text" name="q">
+	<input type="hidden" name="mod" id="mod" value="AP"> 
+	<input type="submit" value="Search">
+</form>
+
+<br>
+
+YouTube
+<form action="https://www.youtube.com/results" method="get" target="_blank">
+	<input type="text" name="search_query">
+	<input type="submit" value="Search">
+</form>
+
+<br>
+
+Google
+<form action="http://www.google.com/search" method="get" target="_blank">
+	<input type="text" name="q">
+	<input type="submit" name="Search">
+</form> 
+
 
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
