--- a/Band8.html
+++ b/Band8.html
@@ -37,31 +37,24 @@
 	
 </table>
 
-<img src="Drakeviews.jpg" alt="Drake">
-	
-Deep Discount
+<img src="Drakeviews.jpg" alt="Drake">	
+
 <form action="http://www.deepdiscount.com/search" method="get" target="_blank">
 	<input type="text" name="q">
 	<input type="hidden" name="mod" id="mod" value="AP"> 
-	<input type="submit" value="Search">
+	<input type="submit" value="Search on Deep Discounts">
 </form>
-
 <br>
-
-YouTube
 <form action="https://www.youtube.com/results" method="get" target="_blank">
 	<input type="text" name="search_query">
-	<input type="submit" value="Search">
+	<input type="submit" value="Search on Youtube">
 </form>
-
 <br>
-
-Google
 <form action="http://www.google.com/search" method="get" target="_blank">
 	<input type="text" name="q">
-	<input type="submit" name="Search">
+	<input type="submit" name="Search on Google">
 </form> 
-
+<br>
 
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
