--- a/Band8.html
+++ b/Band8.html
@@ -52,7 +52,7 @@
 <br>
 <form action="http://www.google.com/search" method="get" target="_blank">
 	<input type="text" name="q">
-	<input type="submit" name="Search on Google">
+	<input type="submit" value="Search on Google">
 </form> 
 <br>
 
