--- a/Band8.html
+++ b/Band8.html
@@ -40,18 +40,18 @@
 <img src="Drakeviews.jpg" alt="Drake">	
 <br>
 <form action="http://www.deepdiscount.com/search" method="get" target="_blank">
-	<input type="text" name="q"> Drake
+	<input type="text" name="q" value="Drake"> 
 	<input type="hidden" name="mod" id="mod" value="AP"> 
 	<input type="submit" value="Search on Deep Discounts">
 </form>
 <br>
 <form action="https://www.youtube.com/results" method="get" target="_blank">
-	<input type="text" name="search_query"> Drake
+	<input type="text" name="search_query" value="Drake">
 	<input type="submit" value="Search on Youtube">
 </form>
 <br>
 <form action="http://www.google.com/search" method="get" target="_blank">
-	<input type="text" name="q"> Drake
+	<input type="text" name="q" value="Drake">
 	<input type="submit" value="Search on Google">
 </form> 
 <br>
