--- a/MusicSurvey.html
+++ b/MusicSurvey.html
@@ -69,7 +69,7 @@ What role does music play in your life?<br>
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
-	Subject=Drake%20HTML" target="_top">Email</a>
+	Subject=Music%20Survey%20HTML" target="_top">Email</a>
 </p>
 
 </body>
