--- a/DogServices.html
+++ b/DogServices.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="DogsAndPupsHome.css">
+	<link rel="stylesheet" type="text/css" href="DogServices.css">
 	<title>Drake.html</title>
 	
 <meta charset="utf-8">
