--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -37,7 +37,7 @@
 	
 </table>
 
-<img src="Drakeviews.jpg" alt="Drake">	
+<img src="Adopt_Us.jpg" alt="AdoptMe">	
 <br>
 	
 <form action="https://www.youtube.com/results" method="get" target="_blank">
