--- a/TipsAndTricks.html
+++ b/TipsAndTricks.html
@@ -37,7 +37,7 @@
 	
 </table>
 
-<img src="Drakeviews.jpg" alt="Drake">	
+<img src="Tips&Tricks.jpg" alt="Tips&Tricks">	
 <br>
 	
 <form action="https://www.youtube.com/results" method="get" target="_blank">
