--- a/AmIReady.html
+++ b/AmIReady.html
@@ -37,7 +37,7 @@
 	
 </table>
 
-<img src="Drakeviews.jpg" alt="Drake">	
+<img src="AmIReady.jpg" alt="AmIReady">	
 <br>
 	
 <form action="https://www.youtube.com/results" method="get" target="_blank">
