--- a/AmIReady.html
+++ b/AmIReady.html
@@ -11,13 +11,7 @@
 </head>
 
 <body>
-<h1 align="center">Drake</h1>
-
-<audio controls>
-  <source src="HypeDrake.mp3" type="audio/mpeg">
-  <source src="HypeDrake.ogg" type="audio/ogg">
-  Your browser does not support the audio element.
-</audio>
+<h1 align="center">Am I Ready</h1>
  
 <table align="center">
 	<tr>
