--- a/AmIReady.html
+++ b/AmIReady.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="AmIReady.css">
-	<title>Drake.html</title>
+	<title>Dogs And Puppies</title>
 	
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -13,24 +13,6 @@
 <body>
 <h1 align="center">Am I Ready</h1>
  
-<table align="center">
-	<tr>
-	<td>Group</td>
-	<td>Tracks</td>
-	<td>Year</td>
-	<td>Links</td>
-	
-	<tr>
-	<th>Drake</th>
-	<th>Views</th>
-	<th>2016</th>
-	<th><a href="http://www.drakeofficial.com/" target="_blank">Drake Official</a>
-	    <a href="https://en.wikipedia.org/wiki/Drake_(musician)" target="_blank">Drake Wiki</a>
-	</th>
-	</tr> 
-	
-</table>
-
 <img src="AmIReady.jpg" alt="AmIReady">	
 <br>
 	
