--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -13,48 +13,14 @@
 <body>
 <h1 align="center">Drake</h1>
 
-<audio controls>
-  <source src="HypeDrake.mp3" type="audio/mpeg">
-  <source src="HypeDrake.ogg" type="audio/ogg">
-  Your browser does not support the audio element.
-</audio>
- 
-<table align="center">
-	<tr>
-	<td>Group</td>
-	<td>Tracks</td>
-	<td>Year</td>
-	<td>Links</td>
-	
-	<tr>
-	<th>Drake</th>
-	<th>Views</th>
-	<th>2016</th>
-	<th><a href="http://www.drakeofficial.com/" target="_blank">Drake Official</a>
-	    <a href="https://en.wikipedia.org/wiki/Drake_(musician)" target="_blank">Drake Wiki</a>
-	</th>
-	</tr> 
-	
-</table>
-
 <img src="Adopt_Us.jpg" alt="AdoptMe">	
-<br>
-	
-<form action="https://www.youtube.com/results" method="get" target="_blank">
-	<input type="text" name="search_query" value="Drake">
-	<input type="submit" value="Search on Youtube">
-</form>
-<br>
-<form action="http://www.google.com/search" method="get" target="_blank">
-	<input type="text" name="q" value="Drake">
-	<input type="submit" value="Search on Google">
-</form> 
+
 <br>
 
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
-	Subject=Drake%20HTML" target="_top">Email</a>
+	Subject=Dogs%20And%20Puppies%20HTML" target="_top">Email</a>
 </p>
 
 </body>
