--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1 align="center">Drake</h1>
+<h1 align="center">Dogs And Puppies</h1>
 
 <img src="Adopt_Us.jpg" alt="AdoptMe">	
 
