--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="DogsAndPupsHome.css">
-	<title>Dogs And Puppies.html</title>
+	<title>Dogs And Puppies</title>
 	
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
