--- a/WebhostingSites.html
+++ b/WebhostingSites.html
@@ -3,8 +3,8 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="Movie8.css">
-	<title>The Fast and Furious: Tokyo Drift.html</title>
+	<link rel="stylesheet" type="text/css" href="WebhostingSites.css">
+	<title>Web hosting Site</title>
 	
 <meta charset="utf-8">
 </head>
