--- a/TipsAndTricks.html
+++ b/TipsAndTricks.html
@@ -4,57 +4,26 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="TipsAndTricks.css">
-	<title>Drake.html</title>
+	<title>Tips And Tricks</title>
 	
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-<h1 align="center">Drake</h1>
+<h1 align="center">Tips And Tricks</h1>
 
-<audio controls>
-  <source src="HypeDrake.mp3" type="audio/mpeg">
-  <source src="HypeDrake.ogg" type="audio/ogg">
-  Your browser does not support the audio element.
-</audio>
- 
-<table align="center">
-	<tr>
-	<td>Group</td>
-	<td>Tracks</td>
-	<td>Year</td>
-	<td>Links</td>
-	
-	<tr>
-	<th>Drake</th>
-	<th>Views</th>
-	<th>2016</th>
-	<th><a href="http://www.drakeofficial.com/" target="_blank">Drake Official</a>
-	    <a href="https://en.wikipedia.org/wiki/Drake_(musician)" target="_blank">Drake Wiki</a>
-	</th>
-	</tr> 
-	
-</table>
+
 
 <img src="Tips&Tricks.jpg" alt="Tips&Tricks">	
 <br>
 	
-<form action="https://www.youtube.com/results" method="get" target="_blank">
-	<input type="text" name="search_query" value="Drake">
-	<input type="submit" value="Search on Youtube">
-</form>
-<br>
-<form action="http://www.google.com/search" method="get" target="_blank">
-	<input type="text" name="q" value="Drake">
-	<input type="submit" value="Search on Google">
-</form> 
 <br>
 
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
-	Subject=Drake%20HTML" target="_top">Email</a>
+	Subject=Dogs%20And%20Puppies%20HTML" target="_top">Email</a>
 </p>
 
 </body>
