--- a/DogServices.html
+++ b/DogServices.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="DogServices.css">
-	<title>Dog And Puppie</title>
+	<title>Dog And Puppies</title>
 	
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
