--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -4,10 +4,11 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="DogsAndPupsHome.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=9" />
 	<title>Dogs And Puppies</title>
 	
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
