--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -13,18 +13,13 @@
 
 <body>
 
- <header>
+    <header>
       <button class="hamburger">&#9776;</button>
       <button class="cross">&#735;</button>
       <nav class="menu">
       <ul>
-        <a href="index.html" ><li>Home</li></a>
-        <a href="https://haroldburgos.github.io/CSISProjects/DogServices.html" ><li>Dog Services</li></a>
-        <a href="sect2.html" ><li>Section 2: Variables and Operators</li></a>
-        <a href="sect3.html" ><li>Section 3: Control Structures and Loops</li></a>
-        <a href="sect4.html" ><li>Section 4: File I/O</li></a>
-        <a href="coderef.html" ><li>Code reference</li></a>
-        <a href="extras.html" ><li>Extras</li></a>
+        <a href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html" ><li>Home</li></a>
+        <a href="https://www.google.com/" ><li>google</li></a>
       </ul>
 	  </nav>
     </header>
