--- a/JobInterest.html
+++ b/JobInterest.html
@@ -14,26 +14,27 @@
 
 <table align="center">
 	<tr>
-	<th>Job Title</th>
-    <td>Employer name and Address</td>
-      <td>Description of the job duties</td>
-        <td> experience and education requirements</td>
-          <td>salary range</td>
+	<th>Webmaster</th>
+    <td>Robert Half Technology, Overland Park, KS</td>
+      <td>Web development and systems integration to network security and technical support. </td>
+        <td>C#, JavaScript, CSS, Experience writing against a Web API, Angular JS, TSQL, Bootstrap Work as Developer, .Net Framework.</td>
+          <td>N/A</td>
 </tr>
   
 <tr>
-	<th>Job Title</th>
-    <td>Employer name and Address</td>
-      <td>Description of the job duties</td>
-        <td> experience and education requirements</td>
-          <td>salary range</td>
+	<th>>.Net Web Developer</th>
+    <td>Favorite Healthcare Staffing, Inc, Kansas City, KS</td>
+      <td>Designing, developing, documenting and testing web pages and Windows applications, Writing SQL and LINQ to SQL queries.</td>
+        <td> Bachelor's Degree in computer science, 2+ years of recent related experience </td>
+          <td>N/A</td>
 </tr>
 	<tr>
-	<th>Job Title</th>
-    <td>Employer name and Address</td>
-      <td>Description of the job duties</td>
-        <td> experience and education requirements</td>
-          <td>salary range</td>
+	<th>Web Developer</th>
+    <td>TEKsystems, Inc, Kansas City, MO</td>
+      <td>develop creative marketing technology solutions</td>
+        <td>3-7 years of front end development experience, HTML5, CSS3, JavaScript and JavaScript libraries (jQuery, Backbone, Angular, etc.), AJAX, JSON, build tools (Grunt, SASS, LESS, etc.), responsive and mobile-optimized development
+</td>
+          <td>N/A</td>
 </tr>
 	<tr>
 	<th>Job Title</th>
