--- a/JobInterest.html
+++ b/JobInterest.html
@@ -13,6 +13,15 @@
 <h1 align="center">Web Hosting Sites</h1>
 
 <table align="center">
+	
+	<tr>
+	<th>Job Title</th>
+    <td>Employer name and Address</td>
+      <td>Description of the job duties</td>
+        <td> experience and education requirements</td>
+          <td>salary range</td>
+	</tr>
+	
 	<tr>
 	<th>Webmaster</th>
     <td>Robert Half Technology, Overland Park, KS</td>
@@ -22,7 +31,7 @@
 </tr>
   
 <tr>
-	<th>>.Net Web Developer</th>
+	<th>.Net Web Developer</th>
     <td>Favorite Healthcare Staffing, Inc, Kansas City, KS</td>
       <td>Designing, developing, documenting and testing web pages and Windows applications, Writing SQL and LINQ to SQL queries.</td>
         <td> Bachelor's Degree in computer science, 2+ years of recent related experience </td>
@@ -36,13 +45,6 @@
 </td>
           <td>N/A</td>
 </tr>
-	<tr>
-	<th>Job Title</th>
-    <td>Employer name and Address</td>
-      <td>Description of the job duties</td>
-        <td> experience and education requirements</td>
-          <td>salary range</td>
-	</tr>
 
 </table>
 
