--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -13,16 +13,16 @@
 
 <body>
 
-    <header>
-      <button class="hamburger">&#9776;</button>
-      <button class="cross">&#735;</button>
-      <nav class="menu">
-      <ul>
-        <a href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html" ><li>Home</li></a>
-        <a href="https://www.google.com/" ><li>google</li></a>
-      </ul>
-	  </nav>
-    </header>
+<div id="header">
+    <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
+        <li><a href="./aboutus.html">About Us</a></li>
+        <li><a href="./events.html">Local Events</a></li>
+        <li><a href="./contactus.html">Contact Us</a></li>
+    </ul>
+</div> 
+
 	
 <h1 align="center">Dogs And Puppies</h1>
 
