--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -17,9 +17,9 @@
     <ul>
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
-        <li><a href="./aboutus.html">About Us</a></li>
-        <li><a href="./events.html">Local Events</a></li>
-        <li><a href="./contactus.html">Contact Us</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Readyy</a></li>
+        <li><a href="www.google.com">Coming Soon</a></li>
+        <li><a href="www.google.com">Comming Soon</a></li>
     </ul>
 </div> 
 
