--- a/AmIReady.html
+++ b/AmIReady.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+
+<div id="header">
+    <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Readyy</a></li>
+        <li><a href="www.google.com">Coming Soon</a></li>
+        <li><a href="www.google.com">Comming Soon</a></li>
+    </ul>
+</div> 	
+	
 <h1 align="center">Am I Ready</h1>
  
 <img src="AmIReady.jpg" alt="AmIReady">	
