--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -19,7 +19,7 @@
         <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Readyy</a></li>
         <li><a href="www.google.com">Coming Soon</a></li>
-        <li><a href="www.google.com">Comming Soon</a></li>
+        <li><a href="www.google.com">Coming Soon</a></li>
     </ul>
 </div> 
 
