--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<div id="header">
+<div class="NavButtons" id="header">
     <ul>
         <li><a class="active" href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html">Home</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
