--- a/AmIReady.html
+++ b/AmIReady.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a class="active" href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html">Home</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
-        <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Readyy</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Ready</a></li>
         <li><a href="www.google.com">Coming Soon</a></li>
         <li><a href="www.google.com">Coming Soon</a></li>
     </ul>
