--- a/AmIReady.html
+++ b/AmIReady.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<div id="header">
+<div class="NavButtons" id="header">
     <ul>
         <li><a class="active" href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html">Home</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
@@ -20,7 +20,8 @@
         <li><a href="www.google.com">Coming Soon</a></li>
         <li><a href="www.google.com">Coming Soon</a></li>
     </ul>
-</div> 	
+</div> 
+	
 	
 <h1 align="center">Am I Ready</h1>
  
