--- a/FAQs.html
+++ b/FAQs.html
@@ -31,6 +31,12 @@
 
 <h1 align="center">Coming Soon</h1>
 <br>
+<audio controls>
+  <source src="The XX - Intro (Original Version).mp3" type="audio/mpeg">
+  <source src="The XX - Intro (Original Version).ogg" type="audio/ogg">
+  Your browser does not support the audio element.
+</audio>
+<br>
 <h1 align="center">Thanks for Visiting</h1>
 
 <p align="center">
