--- a/MyStory.html
+++ b/MyStory.html
@@ -31,7 +31,7 @@
 
 <h1 align="center">Coming Soon</h1>
 <br>
-<audio controls>
+<audio controls autoplay>
   <source src="The XX - Intro (Original Version).mp3" type="audio/mpeg">
   <source src="The XX - Intro (Original Version).ogg" type="audio/ogg">
   Your browser does not support the audio element.
