--- a/AmIReady.html
+++ b/AmIReady.html
@@ -27,7 +27,7 @@
  
 <img src="AmIReady.jpg" alt="AmIReady">	
 <br>
-<ul>
+<ul class="questions">
   <li>Why do you want a pet?
     <ul>
     <li>It's amazing how many people fail to ask themselves this simple question before they get pets. 
