--- a/AmIReady.html
+++ b/AmIReady.html
@@ -34,7 +34,9 @@
   <h2>Do you have time for a pet? </h2>
     <p> Dogs, cats, and other animal companions cannot be ignored just because you're tired or busy.
 	    They require food, water, exercise, care, and companionship every day of every year.
-	    Many animals in the shelter are there because their owners didn't realize how much time it took to care for them.</p> 
+	    Many animals in the shelter are there because their owners didn't realize how much time it took to care for them.</p>
+	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="AmIReady" title="" src="AmIReady.jpg" height="277" width="150" />If
+
 <h2>Can you afford a pet?  </h2>
     <p> The costs of pet ownership can be quite high. Licenses, training classes, 
 	    veterinary care, grooming, toys, food, kitty litter, and other expenses add up quickly.</p> 
