--- a/AmIReady.html
+++ b/AmIReady.html
@@ -28,14 +28,14 @@
 <img src="AmIReady.jpg" alt="AmIReady">	
 <br>
   <h2>Why do you want a pet? </h2>
-    <p> It's amazing how many people fail to ask themselves this simple question before they get pets. 
+    <p> It's amazing how many people fail to ask themselves this simple question before they get pets.<br>
 	    Adopting a pet just because it's "the thing to do" or because the kids have been pining for a puppy
 	    usually ends up being a big mistake. Don't forget that pets may be with you 10, 15, even 20 years.</p> 
   <h2>Do you have time for a pet? </h2>
     <p> Dogs, cats, and other animal companions cannot be ignored just because you're tired or busy.
 	    They require food, water, exercise, care, and companionship every day of every year.
 	    Many animals in the shelter are there because their owners didn't realize how much time it took to care for them.</p>
-	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="AmIReady" title="" src="AmIReady.jpg" height="277" width="150" />If
+	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="AmIReady" title="" src="AmIReady.jpg" height="300" width="300" />If
 
 <h2>Can you afford a pet?  </h2>
     <p> The costs of pet ownership can be quite high. Licenses, training classes, 
