--- a/AmIReady.html
+++ b/AmIReady.html
@@ -29,51 +29,51 @@
 <br>
   <h2>Why do you want a pet? </h2>
     <p> It's amazing how many people fail to ask themselves this simple question before they get pets.<br>
-	    Adopting a pet just because it's "the thing to do" or because the kids have been pining for a puppy
+	    Adopting a pet just because it's "the thing to do" or because the kids have been pining for a puppy<br>
 	    usually ends up being a big mistake. Don't forget that pets may be with you 10, 15, even 20 years.</p> 
   <h2>Do you have time for a pet? </h2>
-    <p> Dogs, cats, and other animal companions cannot be ignored just because you're tired or busy.
-	    They require food, water, exercise, care, and companionship every day of every year.
+    <p> Dogs, cats, and other animal companions cannot be ignored just because you're tired or busy.<br>
+	    They require food, water, exercise, care, and companionship every day of every year.<br>
 	    Many animals in the shelter are there because their owners didn't realize how much time it took to care for them.</p>
 	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="AmIReady" title="" src="AmIReady.jpg" height="300" width="300" />If
 
 <h2>Can you afford a pet?  </h2>
-    <p> The costs of pet ownership can be quite high. Licenses, training classes, 
+    <p> The costs of pet ownership can be quite high. Licenses, training classes, <br>
 	    veterinary care, grooming, toys, food, kitty litter, and other expenses add up quickly.</p> 
  <h2>Are you prepared to deal with special problems that a pet can cause? </h2>
-   <p> Flea infestations, scratched-up furniture, accidents from animals that aren't yet house trained,
+   <p> Flea infestations, scratched-up furniture, accidents from animals that aren't yet house trained,<br>
 	    and unexpected medical emergencies are unfortunate but common aspects of pet ownership.</p> 
 <h2>Are you willing to train your animal companion?  </h2>
-   <p> Lack of training is one of the most common reasons that adopters return pets to shelters—are 
-	    you willing to solve behavior problems? Basic training helps dogs and their owners communicate better, 
-	    strengthening the relationship overall. And taking the time to understand why your cat does what she does,
+   <p> Lack of training is one of the most common reasons that adopters return pets to shelters—are <br>
+	    you willing to solve behavior problems? Basic training helps dogs and their owners communicate better, <br>
+	    strengthening the relationship overall. And taking the time to understand why your cat does what she does,<br>
 	    especially when it involves her litter box and scratching habits, will help you avoid potential problems.</p> 
  <h2>Can you have a pet where you live?  </h2>
-    <p>  Many rental communities don't allow pets, and most of the rest have restrictions. 
+    <p>  Many rental communities don't allow pets, and most of the rest have restrictions. <br>
 	    Make sure you know what they are before you bring a companion animal home.</p> 
 <h2>Is it a good time for you to adopt a pet? </h2>
-    <p> If you have kids under 6 years old, for instance, you might consider waiting a few years
-	    before you adopt a companion. Pet ownership requires children who are mature enough to be responsible.
-	    If you're a student, in the military, or travel frequently as part of your work, 
+    <p> If you have kids under 6 years old, for instance, you might consider waiting a few years<br>
+	    before you adopt a companion. Pet ownership requires children who are mature enough to be responsible.<br>
+	    If you're a student, in the military, or travel frequently as part of your work, <br>
 	    waiting until you settle down is wise.</p> 
 <h2>Are your living arrangements suitable for the animal you have in mind?  </h2>
-    <p> Animal size is not the only variable to think about here. For example, 
-	    some small dogs such as terriers are very active - they require a great deal of exercise to be calm, 
-	    and they often bark at any noise. On the other hand, some big dogs are laid back and quite content
-	    to lie on a couch all day. Before adopting a pet, do some research. That way,
+    <p> Animal size is not the only variable to think about here. For example, <br>
+	    some small dogs such as terriers are very active - they require a great deal of exercise to be calm, <br>
+	    and they often bark at any noise. On the other hand, some big dogs are laid back and quite content<br>
+	    to lie on a couch all day. Before adopting a pet, do some research. That way,<br>
 	    you'll ensure you choose an animal that will fit into your lifestyle and your living arrangements.</p> 
  <h2>Will you be a responsible pet owner?  </h2>
-    <p> Having your pet spayed or neutered, obeying community leash and licensing laws, 
-	    and keeping identification tags on your pets are all part of being a responsible owner. 
-	    Of course, giving your pet love, companionship, exercise, a healthy diet, and regular 
+    <p> Having your pet spayed or neutered, obeying community leash and licensing laws, <br>
+	    and keeping identification tags on your pets are all part of being a responsible owner. <br>
+	    Of course, giving your pet love, companionship, exercise, a healthy diet, and regular <br>
 	    veterinary care are other essentials.</p> 
 
 <p> Sure, it's a long list of questions. But taking a quick stroll through an animal
-	shelter will help you understand why answering them before you adopt is so important. 
-	Many of the Midlands homeless pets are puppies and kittens, victims of irresponsible people 
-	who allowed their pets to breed. But there are at least as many dogs and cats at the shelter
-	who are more than a year old-animals who were obtained by people who didn't think through the 
-	responsibilities of pet ownership before they got the animal. Please, don't make the same mistake.
+	shelter will help you understand why answering them before you adopt is so important. <br>
+	Many of the Midlands homeless pets are puppies and kittens, victims of irresponsible people <br>
+	who allowed their pets to breed. But there are at least as many dogs and cats at the shelter<br>
+	who are more than a year old-animals who were obtained by people who didn't think through the <br>
+	responsibilities of pet ownership before they got the animal. Please, don't make the same mistake.<br>
 	Think before you adopt.</p>	
 <br>
 
