--- a/AmIReady.html
+++ b/AmIReady.html
@@ -35,11 +35,11 @@
     <p> Dogs, cats, and other animal companions cannot be ignored just because you're tired or busy.<br>
 	    They require food, water, exercise, care, and companionship every day of every year.<br>
 	    Many animals in the shelter are there because their owners didn't realize how much time it took to care for them.</p>
-	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="AmIReady" title="" src="AmIReady.jpg" height="300" width="300" />If
-
 <h2>Can you afford a pet?  </h2>
     <p> The costs of pet ownership can be quite high. Licenses, training classes, <br>
 	    veterinary care, grooming, toys, food, kitty litter, and other expenses add up quickly.</p> 
+	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="AmIReady" title="" src="dog_meme.jpg" height="300" width="350" />If
+
  <h2>Are you prepared to deal with special problems that a pet can cause? </h2>
    <p> Flea infestations, scratched-up furniture, accidents from animals that aren't yet house trained,<br>
 	    and unexpected medical emergencies are unfortunate but common aspects of pet ownership.</p> 
